--- a/Registration Form/Views/Home/Index.cshtml
+++ b/Registration Form/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 
 <h4 style="color: #116D6E;">Registration Form</h4>
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm("Submit","Home")) 
 {
     @Html.AntiForgeryToken()
     
